add feat login with jwt

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "strict": true,
-    "paths": {
-      "@review/*": ["./src/review/*"]
-    }
+    "strict": true
   }
 }
